Closed Bug 1368464 Opened 9 years ago Closed 9 years ago

MJPEG (multipart/x-mixed-replace): Cannot paste to other application after copying image. The other application hangs up. Browser crashes after quit browser

Categories

(Core :: Widget: Win32, defect)

51 Branch
Unspecified
Windows 10
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla55
Tracking Status
firefox-esr45 --- unaffected
firefox-esr52 --- wontfix
firefox53 --- wontfix
firefox54 --- wontfix
firefox55 --- verified

People

(Reporter: alice0775, Assigned: hectorz)

References

(Regression)

Details

(Keywords: crash, hang, regression)

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1368288 +++ Steps to reproduce: 1. Visit any page that contains a MJPEG image stream. Example: http://www.northeastern.edu/webcams/foodcourt.html 2. right-clicking > Copy Image> 3. Attempt to paste to paint.net and wordpad Actual results: The other application hangs up until browser quit. And Browser get crash bp-4d9c30ed-537d-4b7c-b606-491730170528 after quit browser. Expected results: Current frame of mJPEG should be pasting with out no hange and crash Regression window: https://hg.mozilla.org/integration/fx-team/pushloghtml?fromchange=46045ec8a4aa09a341b7209170089ade3c27c1a5&tochange=71c8d652e638dd67c5c56879df83d76b30033458 Regressed by: Bug 664717
Flags: needinfo?(bzhao)
Has Regression Range: --- → yes
Has STR: --- → yes
Component: DOM → Widget: Win32
Via local build Last Good: 466c454e0393 First Bad: 457ebb2b73ad Regressed by: 457ebb2b73ad Hector Zhao — Bug 664717 - Part 3: Include file promise when copying an image in Windows. r=seth
IIUC, since MJPEG is actually a stream, I should not be trying to copy it into Windows clipboard as a file (promise). I don't know if there're any other image formats that should be excluded, though.
Flags: needinfo?(bzhao)
Comment on attachment 8874348 [details] Bug 1368464 - don't attempt to copy multipart image as file promise. https://reviewboard.mozilla.org/r/145712/#review149642
Attachment #8874348 - Flags: review?(tnikkel) → review+
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/5176b6015527 Don't attempt to copy multipart image as file promise. r=tnikkel
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
This already missed 54 and it doesn't look severe enough to worry about backporting to ESR52 either. Feel free to set the status back to affected and nominate it for approval if you feel otherwise, however.
Verified fixed!
Status: RESOLVED → VERIFIED
No longer blocks: 664717
Regressed by: 664717
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: