Bug 1368464 - Don't attempt to copy multipart image as file promise. r=tnikkel

MozReview-Commit-ID: 1pwwZwBNb23